tests/paczka1/fuzzy1/10311565.err
Error in line 1: FM1Z0fMAEjf A480 50,6
Error in line 2: 1lOMgwGh S332 99,5
Error in line 3: S417 S220 78,3
Error in line 7: 1lOMgwGh A480 28,5
Error in line 4: FM1Z0fMAEjf S220 74,6
Error in line 6: 26Xpp8B S417 39,4
Error in line 17: 26Xpp8B S220 70,5
Error in line 30: nahtMv A480 7,1
Error in line 24: S417 A480 25,1
Error in line 33: S417 S417 38,5
